--- a/_posts/2021-12-24-matrix.md
+++ b/_posts/2021-12-24-matrix.md
@@ -12,4 +12,4 @@ title: matrix
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
 
-![]({{site.baseurl}}/https://c.tenor.com/Zco-fadJri4AAAAd/code-matrix.gif)
+![codigo matrix]({{site.baseurl}}/media/code-matrix.gif)
